--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -47,6 +47,22 @@
             <a class="nav-link" href="/contact"> <i class="fas fa-lg fa-address-card"></i> Contact </a>
             <% } %>
           </li>
+          <li class="nav-item">
+            <% if (title == "Contact List") { %>
+              <a class="nav-link active text success" aria-current="page" href="/contactList"><i class="fas fa-lg fa-folder-open"></i> Contact List</a>
+            <% } else { %> 
+            <a class="nav-link" href="/contactList"> <i class="fas fa-lg fa-folder-open"></i> Contact List </a>
+            <% } %>
+          </li>
+
+            <li class="nav-item">
+            <% if (title == "Login") { %>
+              <a class="nav-link active text success" aria-current="page" href="/login"><i class="fas fa-lg fa-folder-open"></i> Login</a>
+            <% } else { %> 
+            <a class="nav-link" href="/login"> <i class="fas fa-lg fa-folder-open"></i> Login </a>
+            <% } %>
+          </li>
+
 
   </div>
 </nav>
