--- a/views/partials/contents.ejs
+++ b/views/partials/contents.ejs
@@ -104,3 +104,33 @@
     </div>
      <% } else { %> 
      <% } %>
+     <% if (title == "Login") { %>
+      <div class = "center">
+               <div class="row">
+              <div class="offset-md-4 col-md-4">
+                  <h1>Please Login</h1>
+                  <form method="POST" autocomplete="off">
+                      <fieldset class="form group">
+                          <label for="username">Username: </label>
+                          <input type="text" class="form-control" 
+                          name="username" placeholder="Enter username"
+                          id="username" required autofocus>
+                          </fieldset>
+                      <fieldset class="form group">
+                          <label for="username">Password: </label>
+                          <input type="password" class="form-control" 
+                          name="password" placeholder="Enter password"
+                          id="password" required>
+                          or 
+                          <a href="/register">Register Here</a>
+                          </fieldset>
+                      <fieldset class="form-group text-right">
+                          <input type="submit" class="btn btn-success" value="Login">
+                          <a href="/contactList">
+                              <input type="button" class="btn btn-warning" value="Cancel">
+                      </fieldset>          
+                  </form>
+              </div>
+          </div>
+                  <% } else { %> 
+                  <% } %>
